--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fisheye",
   "version": "0.1.0",
   "private": true,
-  
+  "homepage": "https://eg-openclassrooms-reactjs-formation.github.io/fisheye",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
